# agentica-

./: .gitignore  .replit  README.md  package-lock.json  pyproject.toml  replit.md  vite.config.js
attached_assets/: Pasted--Replit-AI-Replit-AI--1757433530399_1757433530400.txt
backend/: main.py
src/api/: base44Client.js  client.js  entities.js  functions.js  integrations.js
src/components/agents/: AgentCard.jsx  AgentSettingsModal.jsx  CreateAgentModal.jsx
src/components/chat/: IntegrationPanel.jsx  ScheduledTasksPanel.jsx
src/components/customers/: CreateCustomerModal.jsx  CustomerCard.jsx  CustomersTable.jsx  EditCustomerModal.jsx
src/components/settings/: CrmSettings.jsx  IntegrationSettings.jsx  SecuritySettings.jsx
src/components/templates/: TemplateCard.jsx
src/pages/: AgentChat.jsx  Agents.jsx  AuthGoogleCallback.jsx  Customers.jsx  Dashboard.jsx  Layout.jsx  Settings.jsx  Templates.jsx  index.jsx
